src/web/flat/normal.css
/* ... */
#top li > div > a { margin-top: 3px; }
#top li > div > a.active { font-weight: bold; }
#top li > div > a:hover { text-decoration: underline; }

#logo {
    height: 70%;
    object-fit: contain;
    margin-right: 2em;
}
#logo > img {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

#side menu {
    margin: 0;
    padding: 8px;
    width: 224px;
    box-sizing: border-box;

    position: fixed;
    left: calc(50% + 360px);
    top: calc(var(--top_height) + 34px);

    background: #fdfdfd;
    border: 2px solid #383838;
}
#side li { list-style-type: none; }
#side a {
    display: block;
    padding: 1px;
    color: #383838;
    text-decoration: none;
}
#side a:hover { text-decoration: underline; }
#side a.active { font-weight: bold; }
#side a.lv1 { padding-left: 12px; }
#side a.lv2 { padding-left: 27px; }
#side a.lv3 { padding-left: 42px; }
#side a.lv4 { padding-left: 57px; }
#side a.lv5 { padding-left: 72px; }
#side a.lv6 { padding-left: 87px; }

#deploy { display: none; }

main {
    flex: 1;
    width: 100%;
    max-width: 1200px;
    box-sizing: border-box;
    margin: 20px auto 0 auto;
    padding: 0 16px 16px 16px;
}
#side ~ main { padding-right: 290px; }

footer {
    padding: 0.5em;
    background: var(--footer_background);
    display: flex;
    gap: 1.5em;
    align-items: center;
    justify-content: center;
}
footer > img { filter: saturate(0%) brightness(0); }

p { margin: 1em 0 0 0; }
p:first-child, h1 + p, h2 + p, h3 + p { margin-top: 0; }

main img { max-width: 100%; }

h1 {
    margin: 0 0 0.5em 0;
    font-size: 1.6em;
    text-transform: uppercase;
    font-weight: normal;
    color: #383838;
    font-weight: bold;
}
h2 {
    margin: 0 0 1em 0;
    display: table;
    padding: 2px 14px 2px 30px;
    background: #191f22;
    font-size: 1.2em;
    font-weight: normal;
    text-transform: uppercase;
    color: white;
}
h3 {
    margin: 0 0 0.8em 0;
    display: table;
    padding: 2px 14px 2px 40px;
    background: #ddd;
    font-size: 1.1em;
    font-weight: normal;
    font-style: italic;
    text-transform: uppercase;
    color: #383838;
}
* + h1, * + h2, * + h3 { margin-top: 1.2em; }

table {
    margin: 0 auto;
    border-collapse: collapse;
    empty-cells: show;
}
tr {
    border-bottom: 1px solid #ededf0;
    vertical-align: middle;
}
th, td {
    height: 1.5em;
    padding: 0.5em;
    vertical-align: middle;
}
th {
    text-align: left;
    text-transform: uppercase;
    background: #f8f8f8;
    user-select: none;
    -webkit-user-select: none;
}
td {
    background: white;
    border: 1px solid #ebebeb;
}
thead th { text-align: center; }
tbody th {
    text-align: left;
    font-weight: normal;
    font-style: italic;
}
th.center, td.center { text-align: center; }
th.right, td.right { text-align: right; }
table :is(td, th, col).check { width: 2em; }
table :is(td, th).center { text-align: center; }
table :is(td, th).right { text-align: right; }
table :is(tr, td, th, col).missing {
    font-style: italic;
    color: var(--color, gray);
}
table :is(td, th).picture { padding: 6px 0 0 6px; }
table :is(td, th).picture > img {
    width: 24px;
    height: 24px;
}
table + div.legend {
    margin-top: calc(-1em + 2px);
    text-align: center;
    font-size: 0.8em;
}

hr {
    margin: 4px auto;
    width: 90%;
    border: none;
    border-bottom: 1px solid #ededf0;
}

button {
    padding: 0.21em 0.71em 0.28em 0.71em;
    background: var(--button_color);
    border: none;
    border-radius: 10px;
    color: white;
    cursor: pointer;
    white-space: nowrap;
}
button::-moz-focus-inner { border: 0; }
button:not(:disabled):not(.active):hover {
    background: color-mix(in srgb, var(--button_color) 90%, black);
    color: white;
}
button:disabled {
    filter: saturate(10%);
    cursor: not-allowed;
    pointer-events: none;
}
button.active { background: color-mix(in srgb, var(--button_color) 50%, black); }
button > img {
    width: 16px;
    height: 16px;
    transform: translateY(2px);
}
button > img:only-child {
    width: 32px;
    height: 32px;
    transform: translateY(4px);
}
button.secondary {
    background: #ddd;
    color: black;
}
button.secondary:not(.insist) > img { filter: none; }
button.danger {
    background: #d33410 !important;
    --color: white;
    color: var(--color);
}
button.insist {
    background: #d33410 !important;
    --color: white;
    color: var(--color) !important;
    transition: --color 0.2s ease, background 0.2s ease, border-color 0.2s ease;
}
button.danger.insist { background: #951a0b !important; }
button.small { font-size: 0.7em; }
button.small > img {
    width: 12px;
    height: 12px;
}
button.small:not(.insist) > img { filter: none; }

.actions {
    margin: 1em 0;
    display: flex;
    gap: 20px;
    justify-content: center;
    flex-wrap: wrap;
}
.actions > a {
    display: block;
    width: 30%;
    min-width: 10em;
    background: var(--button_color);
    color: white;
    padding: 0.4em 0.8em;
    text-decoration: none;
    text-align: center;
}
.actions > a:hover {
    background: color-mix(in srgb, var(--button_color) 90%, black);
    color: white;
}
.actions > a.disabled {
    pointer-events: none;
    filter: saturate(10%);
}

dialog {
    position: fixed;
    z-index: 9999;
    left: 0;
    top: 0;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    padding: 44px 1em 1em 1em;
    display: flex;
    align-items: start;
    justify-content: center;
    background: #ffffffcc;
    border: none;
    -webkit-backdrop-filter: blur(4px);
    backdrop-filter: blur(4px);
}
dialog ~ dialog {
    padding-top: 66px;
    -webkit-backdrop-filter: none;
    backdrop-filter: none;
}
dialog > * {
    background-color: white;
    max-height: 80vh;
    overflow-y: auto;
}
/* ... */

